// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build fs output > _00 manifest.json 1`] = `
Object {
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/content.js-loader.hash0.js",
      ],
      "matches": Array [
        "https://example.com/*",
      ],
      "run_at": "document_end",
      "world": "MAIN",
    },
    Object {
      "js": Array [
        "assets/content.js-loader.hash0.js",
      ],
      "match_about_blank": true,
      "matches": Array [
        "https://outlook.office.com/*",
      ],
      "run_at": "document_end",
      "world": "MAIN",
    },
    Object {
      "js": Array [
        "assets/content2.js-loader.hash1.js",
      ],
      "matches": Array [
        "<all_urls>",
      ],
      "run_at": "document_end",
      "world": "MAIN",
    },
    Object {
      "js": Array [
        "assets/content2.js-loader.hash1.js",
      ],
      "match_about_blank": true,
      "matches": Array [
        "https://outlook.office.com/*",
      ],
      "run_at": "document_end",
      "world": "MAIN",
    },
  ],
  "description": "test content script declared in multiple content_scripts entries",
  "manifest_version": 3,
  "name": "Test Content Script Multiple Registrations",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "https://example.com/*",
        "https://outlook.office.com/*",
      ],
      "resources": Array [
        "assets/content.js.hash2.js",
        "assets/message.hash3.js",
        "assets/preload-helper.hash4.js",
      ],
      "use_dynamic_url": false,
    },
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "assets/content2.js.hash5.js",
        "assets/message.hash3.js",
        "assets/preload-helper.hash4.js",
      ],
      "use_dynamic_url": false,
    },
  ],
}
`;

exports[`build fs output > _01 output files 1`] = `
Array [
  "assets/content.js-loader.hash0.js",
  "assets/content.js.hash2.js",
  "assets/content2.js-loader.hash1.js",
  "assets/content2.js.hash5.js",
  "assets/message.hash3.js",
  "assets/preload-helper.hash4.js",
  "manifest.json",
]
`;

exports[`build fs output > assets/content.js.hash2.js 1`] = `
"import { _ as __vitePreload } from \\"./preload-helper.hash4.js\\";
(async () => {
  const { logMessage } = await __vitePreload(() => import(\\"./message.hash3.js\\"), true ? [] : void 0);
  logMessage();
})().catch(console.error);
"
`;

exports[`build fs output > assets/content.js-loader.hash0.js 1`] = `
"(function () {
  'use strict';

  const injectTime = performance.now();
  (async () => {
    const { onExecute } = await import(
      /* @vite-ignore */
      \\"./content.js.hash2.js\\"
    );
    onExecute?.({ perf: { injectTime, loadTime: performance.now() - injectTime } });
  })().catch(console.error);

})();
"
`;

exports[`build fs output > assets/content2.js.hash5.js 1`] = `
"import { _ as __vitePreload } from \\"./preload-helper.hash4.js\\";
(async () => {
  const { logMessage } = await __vitePreload(() => import(\\"./message.hash3.js\\"), true ? [] : void 0);
  logMessage();
})().catch(console.error);
"
`;

exports[`build fs output > assets/content2.js-loader.hash1.js 1`] = `
"(function () {
  'use strict';

  const injectTime = performance.now();
  (async () => {
    const { onExecute } = await import(
      /* @vite-ignore */
      \\"./content2.js.hash5.js\\"
    );
    onExecute?.({ perf: { injectTime, loadTime: performance.now() - injectTime } });
  })().catch(console.error);

})();
"
`;

exports[`build fs output > assets/message.hash3.js 1`] = `
"function logMessage() {
  console.log(\\"content script running\\");
}
export {
  logMessage
};
"
`;

exports[`build fs output > assets/preload-helper.hash4.js 1`] = `
"const scriptRel = \\"modulepreload\\";
const assetsURL = function(dep) {
  return \\"/\\" + dep;
};
const seen = {};
const __vitePreload = function preload(baseModule, deps, importerUrl) {
  if (!deps || deps.length === 0) {
    return baseModule();
  }
  const links = document.getElementsByTagName(\\"link\\");
  return Promise.all(deps.map((dep) => {
    dep = assetsURL(dep);
    if (dep in seen)
      return;
    seen[dep] = true;
    const isCss = dep.endsWith(\\".css\\");
    const cssSelector = isCss ? '[rel=\\"stylesheet\\"]' : \\"\\";
    const isBaseRelative = !!importerUrl;
    if (isBaseRelative) {
      for (let i = links.length - 1; i >= 0; i--) {
        const link2 = links[i];
        if (link2.href === dep && (!isCss || link2.rel === \\"stylesheet\\")) {
          return;
        }
      }
    } else if (document.querySelector(\`link[href=\\"\${dep}\\"]\${cssSelector}\`)) {
      return;
    }
    const link = document.createElement(\\"link\\");
    link.rel = isCss ? \\"stylesheet\\" : scriptRel;
    if (!isCss) {
      link.as = \\"script\\";
      link.crossOrigin = \\"\\";
    }
    link.href = dep;
    document.head.appendChild(link);
    if (isCss) {
      return new Promise((res, rej) => {
        link.addEventListener(\\"load\\", res);
        link.addEventListener(\\"error\\", () => rej(new Error(\`Unable to preload CSS for \${dep}\`)));
      });
    }
  })).then(() => baseModule());
};
export {
  __vitePreload as _
};
"
`;
